feat: API v2 pairs
